fixed default header size to 90px on desktop and 50px on mobile

--- a/src/app/config/styles/_config-default.scss
+++ b/src/app/config/styles/_config-default.scss
@@ -3,7 +3,7 @@
 
 $font-family: 'Open Sans', Helvetica, Arial, sans-serif !default;
 
-$header-height-desktop: 150px;
+$header-height-desktop: 90px;
 $header-height-mobile: 50px;
 
 //  BRAND AND CATEGORIES COLORS
